Fix auth. Optimize schema route. Start to enhance the events route.
